// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Result component renders correctly 1`] = `
<div>
  <table>
    <tbody>
      <tr
        aria-label="Play episode: Test Episode Title"
        class="episode-row"
        role="button"
        tabindex="0"
      >
        <td
          class="episode-title-cell"
        >
          <a
            aria-label="Stream or download: Test Episode Title"
            href="https://example.com/episode.mp3"
          >
            Test Episode Title
          </a>
        </td>
        <td
          class="date-column"
        >
          <time
            datetime="2023-05-15T12:00:00Z"
          >
            May 15, 2023
          </time>
        </td>
        <td
          class="duration-column"
        >
          01:00:00
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Result component renders with empty duration and date 1`] = `
<div>
  <table>
    <tbody>
      <tr
        aria-label="Play episode: Test Episode Title"
        class="episode-row"
        role="button"
        tabindex="0"
      >
        <td
          class="episode-title-cell"
        >
          <a
            aria-label="Stream or download: Test Episode Title"
            href="https://example.com/episode.mp3"
          >
            Test Episode Title
          </a>
        </td>
        <td
          class="date-column"
        >
          <time
            datetime=""
          >
            Unknown date
          </time>
        </td>
        <td
          class="duration-column"
        >
          00:00:00
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
